--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,7 +2,7 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-
+    php_value memory_limit 512M
     RewriteEngine On
 
     # Handle Authorization Header
